<resources>
    <string name="app_name">Кадровый Учет</string>
    <string name="login_title">Вход в систему</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="apply_job_button">Устроиться на работу</string>
    <string name="login_error_empty_fields">Логин и пароль не могут быть пустыми</string>
    <string name="login_error_invalid_credentials">Неверный логин или пароль</string>
    <string name="login_error_generic">Ошибка входа. Попробуйте позже.</string>
    <string name="login_in_progress">Выполняется вход...</string>
    <string name="remove_language_button_desc">Удалить язык</string>
    <string name="candidate_step1_title">Шаг 1: Личные данные</string>
    <string name="last_name_hint">Фамилия</string>
    <string name="first_name_hint">Имя</string>
    <string name="dob_hint">Дата рождения (дд.мм.гггг)</string>
    <string name="select_date_desc">Выбрать дату</string>
    <string name="gender_label">Пол</string>
    <string name="gender_male">Мужской</string>
    <string name="gender_female">Женский</string>
    <string name="education_level_label">Уровень образования</string>
    <string name="education_higher">Высшее</string>
    <string name="education_secondary">Не высшее</string>
    <string name="total_experience_hint">Общий стаж (полных лет)</string>
    <string name="academic_experience_hint">Научно-педагогический стаж (полных лет)</string>
    <string name="next_button">Далее</string>
    <string name="error_field_required">Поле обязательно для заполнения</string>
    <string name="error_invalid_date">Некорректная дата</string>
    <string name="error_date_in_future">Дата не может быть в будущем</string>
    <string name="error_age_invalid">Возраст не соответствует требованиям</string>
    <string name="error_exp_negative">Стаж не может быть отрицательным</string>
    <string name="error_academic_exp_greater">Академический стаж не может быть больше общего</string>
    <string name="candidate_step2_title">Шаг 2: Выбор должности</string>
    <string name="department_hint">Подразделение</string>
    <string name="position_hint">Должность</string>
    <string name="error_department_required">Выберите подразделение</string>
    <string name="error_position_required">Выберите должность</string>
    <string name="candidate_step3_title">Шаг 3: Знание языков</string>
    <string name="language_hint">Язык</string>
    <string name="level_hint">Уровень</string>
    <string name="add_language_button_desc">Добавить язык</string>
    <string name="selected_languages_title">Выбранные языки:</string>
    <string name="no_languages_selected">Языки не выбраны</string>
    <string name="error_language_already_added">Этот язык уже добавлен</string>
    <string name="error_select_language_and_level">Выберите язык и уровень</string>
    <string name="level_elementary">Начальный</string>
    <string name="level_intermediate">Средний</string>
    <string name="level_advanced">Продвинутый</string>
    <string name="level_fluent">Свободно</string>
    <string name="level_native">Родной</string>
    <string name="candidate_preview_title">Шаг 4: Проверка данных</string>
    <string name="full_name_label">ФИО</string>
    <string name="dob_label">Дата рождения</string>
    <string name="experience_label">Стаж</string>
    <string name="languages_label">Языки</string>
    <string name="submit_application_button">Отправить заявку</string>
    <string name="submit_success_message">Ваша заявка успешно отправлена!</string>
    <string name="submit_error_message">Не удалось отправить заявку. Пожалуйста, проверьте данные или попробуйте позже.</string>
    <string name="validation_error_prefix">Ошибка валидации</string>
    <string name="dashboard_title">Сотрудники и Заявки</string>
    <string name="search_hint">Поиск по ФИО</string>
    <string name="filter_status_hint">Статус</string>
    <string name="filter_department_hint">Подразделение</string>
    <string name="status_all">Все статусы</string>
    <string name="status_new">Новые заявки</string>
    <string name="status_accepted">Принятые</string>
    <string name="department_all">Все подразделения</string>
    <string name="empty_list_message">Список пуст</string>
    <string name="menu_item_settings">Настройки</string>
    <string name="menu_item_reports">Отчеты</string>
    <string name="menu_item_admin_panel">Админ-панель</string>
    <string name="unknown_position">Неизвестная должность</string>
    <string name="unknown_department">Неизвестный отдел</string>
    <string name="status_new_chip">Новая</string>
    <string name="status_accepted_chip">Принят</string>
    <string name="details_title_placeholder">Детали</string>
    <string name="details_title_employee">Карточка сотрудника</string>
    <string name="details_title_application">Заявка кандидата</string>
    <string name="menu_item_edit">Редактировать</string>
    <string name="menu_item_save">Сохранить</string>
    <string name="menu_item_cancel">Отмена</string>
    <string name="menu_item_delete">Удалить</string>
    <string name="reject_button">Отклонить</string>
    <string name="accept_button">Принять</string>
    <string name="tariff_rate_hint">Тарифный разряд (1-18)</string>
    <string name="confirm_delete_title">Подтверждение удаления</string>
    <string name="confirm_delete_employee_message">Вы уверены, что хотите удалить этого сотрудника? Это действие необратимо.</string>
    <string name="confirm_reject_application_message">Вы уверены, что хотите отклонить (удалить) эту заявку?</string>
    <string name="delete_button">Удалить</string>
    <string name="cancel_button">Отмена</string>
    <string name="save_success">Данные сохранены</string>
    <string name="save_error">Ошибка сохранения</string>
    <string name="accept_success">Заявка принята</string>
    <string name="accept_error">Ошибка принятия заявки</string>
    <string name="reject_success">Заявка отклонена</string>
    <string name="reject_error">Ошибка отклонения заявки</string>
    <string name="delete_success">Сотрудник удален</string>
    <string name="delete_error">Ошибка удаления</string>
    <string name="error_loading_details">Ошибка загрузки данных</string>
    <string name="reports_title">Генерация Отчетов</string>
    <string name="report_by_department">Сотрудники по подразделениям</string>
    <string name="report_by_language">Сотрудники по языкам</string>
    <string name="report_by_age">Возрастной состав</string>
    <string name="report_vacancies">Доступные места (вакансии)</string>
    <string name="report_generating">Генерация отчета...</string>
    <string name="report_success_message">Отчет сохранен. Хотите открыть?</string>
    <string name="report_error_message">Ошибка генерации отчета</string>
    <string name="report_open_button">Открыть</string>
    <string name="report_error_no_app">Не найдено приложение для открытия PDF</string>
    <string name="settings_title">Настройки</string>
    <string name="change_password_title">Смена пароля</string>
    <string name="old_password_hint">Текущий пароль</string>
    <string name="new_password_hint">Новый пароль (мин. 6 симв.)</string>
    <string name="confirm_password_hint">Подтвердите новый пароль</string>
    <string name="change_password_button">Сменить пароль</string>
    <string name="password_change_success">Пароль успешно изменен</string>
    <string name="password_change_error">Ошибка смены пароля</string>
    <string name="error_passwords_dont_match">Новый пароль и подтверждение не совпадают</string>
    <string name="error_password_too_short">Новый пароль слишком короткий</string>
    <string name="error_all_password_fields_required">Заполните все поля пароля</string>
    <string name="theme_settings_title">Тема оформления</string>
    <string name="theme_light">Светлая</string>
    <string name="theme_dark">Темная</string>
    <string name="theme_system">Системная</string>
    <string name="admin_panel_title">Админ-панель</string>
    <string name="manage_users_button">Управление пользователями</string>
    <string name="manage_departments_button">Управление отделами</string>
    <string name="manage_positions_button">Управление должностями</string>
    <string name="manage_languages_button">Управление языками</string>
    <string name="user_management_title">Пользователи</string>
    <string name="empty_user_list_message">Пользователи не найдены</string>
    <string name="add_user_fab_desc">Добавить пользователя</string>
    <string name="more_options_desc">Дополнительные опции</string>
    <string name="dialog_add_user_title">Добавить пользователя</string>
    <string name="dialog_edit_user_title">Редактировать пользователя</string>
    <string name="role_label">Роль</string>
    <string name="role_hr">HR</string>
    <string name="role_admin">Admin</string>
    <string name="user_option_edit">Редактировать</string>
    <string name="user_option_delete">Удалить</string>
    <string name="user_option_reset_password">Сбросить пароль</string>
    <string name="dialog_reset_password_title">Сброс пароля</string>
    <string name="dialog_reset_password_message">Введите новый пароль для пользователя \'%1$s\':</string>
    <string name="new_password_hint_short">Новый пароль (мин. 6)</string>
    <string name="reset_button">Сбросить</string>
    <string name="confirm_delete_user_message">Вы уверены, что хотите удалить пользователя \'%1$s\'?</string>
    <string name="error_cannot_delete_last_admin">Нельзя удалить последнего администратора</string>
    <string name="manage_departments_title">Отделы</string>
    <string name="manage_positions_title">Должности</string>
    <string name="manage_languages_title">Языки</string>
    <string name="empty_dictionary_message">Справочник пуст</string>
    <string name="add_dictionary_item_fab_desc">Добавить элемент</string>
    <string name="dialog_add_department_title">Добавить отдел</string>
    <string name="dialog_edit_department_title">Редактировать отдел</string>
    <string name="dialog_add_position_title">Добавить должность</string>
    <string name="dialog_edit_position_title">Редактировать должность</string>
    <string name="dialog_add_language_title">Добавить язык</string>
    <string name="dialog_edit_language_title">Редактировать язык</string>
    <string name="hint_department_name">Название отдела</string>
    <string name="hint_position_name">Название должности</string>
    <string name="hint_language_name">Название языка</string>
    <string name="position_max_allowed_hint">Макс. количество (>= 0)</string>
    <string name="position_requires_higher_edu_label">Требует высшее образование</string>
    <string name="position_is_assistant_label">Является ассистентом</string>
    <string name="error_invalid_max_allowed">Некорректное макс. количество</string>
    <string name="save_button">Сохранить</string>
    <string name="add_button">Добавить</string>
    <string name="confirm_delete_dictionary_item_message">Вы уверены, что хотите удалить \'%1$s\'? Это может повлиять на связанные записи.</string>
    <string name="dialog_add_prefix">Добавить</string>
    <string name="dialog_edit_prefix">Редактировать</string>
    <string name="dialog_department_suffix">отдел</string>
    <string name="dialog_position_suffix">должность</string>
    <string name="dialog_language_suffix">язык</string>
    <string name="dialog_item_suffix">элемент</string>
    <string name="report_success_message_short">Отчет сохранен</string>
    <string name="report_share_button">Поделиться</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>