<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_reports"
        android:title="@string/menu_item_reports"
        android:icon="@drawable/ic_report"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_admin_panel"
        android:title="@string/menu_item_admin_panel"
        android:icon="@drawable/ic_admin_panel"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_item_settings"
        app:showAsAction="never" />

</menu>