<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Кнопка Сохранить -->
    <item
        android:id="@+id/action_save"
        android:title="@string/menu_item_save"
        android:icon="@drawable/ic_save_check"
        app:iconTint="?attr/colorPrimary"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <!-- Кнопка Редактировать -->
    <item
        android:id="@+id/action_edit_pencil"
        android:title="@string/menu_item_edit"
        android:icon="@drawable/ic_edit"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom"
        android:visible="true"/>

    <!-- Кнопка Удалить -->
    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_item_delete"
        android:icon="@drawable/ic_delete"
        app:iconTint="?attr/colorError"
        app:showAsAction="ifRoom"
        android:visible="false" />

</menu>