<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Логин -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_dialog_user_login"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_dialog_user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Пароль (виден только при добавлении) -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_dialog_user_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password_hint"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_dialog_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Роль -->
    <TextView
        android:id="@+id/tv_dialog_user_role_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/role_label"
        android:textAppearance="?attr/textAppearanceLabelLarge"/>
    <RadioGroup
        android:id="@+id/rg_dialog_user_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">
        <RadioButton
            android:id="@+id/rb_dialog_role_hr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role_hr"/>
        <RadioButton
            android:id="@+id/rb_dialog_role_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/role_admin"/>
    </RadioGroup>

</LinearLayout>