<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".ui.candidate.CandidatePreviewFragment">

        <!-- Заголовок -->
        <TextView
            android:id="@+id/tv_preview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/candidate_preview_title"
            android:textAppearance="?attr/textAppearanceHeadlineSmall"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- ФИО -->
        <TextView
            android:id="@+id/tv_full_name_label"
            style="@style/PreviewLabelStyle"
            android:text="@string/full_name_label"
            app:layout_constraintTop_toBottomOf="@id/tv_preview_title"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_full_name_value"
            style="@style/PreviewValueStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_full_name_label"
            tools:text="Иванов Иван"/>

        <!-- Дата рождения -->
        <TextView
            android:id="@+id/tv_dob_label"
            style="@style/PreviewLabelStyle"
            android:text="@string/dob_label"
            app:layout_constraintTop_toBottomOf="@id/tv_full_name_value"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_dob_value"
            style="@style/PreviewValueStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dob_label"
            tools:text="01.01.1990"/>

        <!-- Пол -->
        <TextView
            android:id="@+id/tv_gender_preview_label"
            style="@style/PreviewLabelStyle"
            android:text="@string/gender_label"
            app:layout_constraintTop_toBottomOf="@id/tv_dob_value"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_gender_preview_value"
            style="@style/PreviewValueStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_gender_preview_label"
            tools:text="Мужской"/>

        <!-- Образование -->
        <TextView
            android:id="@+id/tv_education_preview_label"
            style="@style/PreviewLabelStyle"
            android:text="@string/education_level_label"
            app:layout_constraintTop_toBottomOf="@id/tv_gender_preview_value"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_education_preview_value"
            style="@style/PreviewValueStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_education_preview_label"
            tools:text="Высшее"/>

        <!-- Стаж -->
        <TextView
            android:id="@+id/tv_experience_label"
            style="@style/PreviewLabelStyle"
            android:text="@string/experience_label"
            app:layout_constraintTop_toBottomOf="@id/tv_education_preview_value"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_experience_value"
            style="@style/PreviewValueStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_experience_label"
            tools:text="Общий: 10 лет, Академ.: 5 лет"/>

        <!-- Подразделение -->
        <TextView
            android:id="@+id/tv_department_preview_label"
            style="@style/PreviewLabelStyle"
            android:text="@string/department_hint"
            app:layout_constraintTop_toBottomOf="@id/tv_experience_value"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_department_preview_value"
            style="@style/PreviewValueStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_department_preview_label"
            tools:text="Кафедра ИВТ"/>

        <!-- Должность -->
        <TextView
            android:id="@+id/tv_position_preview_label"
            style="@style/PreviewLabelStyle"
            android:text="@string/position_hint"
            app:layout_constraintTop_toBottomOf="@id/tv_department_preview_value"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_position_preview_value"
            style="@style/PreviewValueStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_position_preview_label"
            tools:text="Доцент"/>

        <!-- Языки -->
        <TextView
            android:id="@+id/tv_languages_preview_label"
            style="@style/PreviewLabelStyle"
            android:text="@string/languages_label"
            app:layout_constraintTop_toBottomOf="@id/tv_position_preview_value"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_languages_preview_value"
            style="@style/PreviewValueStyle"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_languages_preview_label"
            tools:text="Английский (Продвинутый), Немецкий (Средний)"/>


        <!-- Индикатор загрузки при отправке -->
        <ProgressBar
            android:id="@+id/progress_bar_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/tv_languages_preview_value"
            app:layout_constraintBottom_toTopOf="@id/btn_submit_application"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <!-- Кнопка Отправить -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit_application"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit_application_button"
            app:icon="@drawable/ic_send"
            app:iconTint="?attr/colorOnPrimary"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>